--- a/style.css
+++ b/style.css
@@ -1,34 +1,35 @@
 :root {
     --main-color: #2a2525;
     --gold-color: #d6963d;
+    --text-color: white;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     background-color: var(--main-color);
-    color: var(--header-color);
+    color: var(--text-color);
 }
 
 #header {
-    background-color: var(--main-color);
     font-size: 20px;
-    padding: 8px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
 }
 
-.logo {
+#header > .logo {
     display: flex;
     max-width: 100px;
     max-height: 100px;
     margin: 0 auto 0 0;
 }
 
- .header-buttons > button{
+ .header-buttons > button {
     background-color: transparent;
+    color: var(--text-color);
     font-size: 18px;
     border: none;
-    color: white;
     padding: 10px;
     text-decoration: none;
 }
@@ -37,5 +38,13 @@ button#order-btn {
     background-color: var(--gold-color);
     border-radius: 30px;
     padding: 5px 15px;
-    min-height: 30px; min-width: 120px;
+    min-height: 40px; min-width: 110px;
+}
+
+#footer {
+    min-height: 46px; width: 100%;
+    background-color: var(--gold-color);
+    /* Sticky footer */
+    bottom: 0; left: 0; position: fixed;
+    text-align: center;
 }
