--- a/index/index.css
+++ b/index/index.css
@@ -35,7 +35,8 @@ body {
     color: var(--text-color);
     font-size: 18px;
     border: none;
-    padding: 20px;
+    padding: 10px;
+    margin-right: 2px;
     text-decoration: none;
 }
 
@@ -43,35 +44,60 @@ button#order-btn {
     background-color: var(--gold-color);
     border-radius: 30px;
     padding: 5px 15px;
+    border: none;
+    color: white;
     min-height: 40px; min-width: 110px;
 }
 
 #hero {
     z-index: -1;
+    min-height: 100%;
+    padding-bottom: 30px;
 }
 
 #hero-video {
     position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0; opacity: 0.5;
-    width: 100vw; height: auto;
-    clip-path: inset(30px 0px);
+    top: 0; right: 0; bottom: 0; left: 0; opacity: 0.4;
+    width: 100%; height: auto;
     margin-top: -30px;
-    filter: blur(3px)
+    filter: blur(3px);
 }
 
-#hero-text {
+#hero-content {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
     color: var(--gold-color);
-    margin-top: 100px;
-    z-index: 1;
 
+}
+
+#hero-content > .logo {
+    width: 100%; height: auto; max-width: 100px;
+}
+
+#grid {
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+.col-btn {
+    width: 100%; max-width: 400px; height: auto;
+    padding: 1rem;
+    position: relative;
+    background: linear-gradient(to right, var(--gold-color), gold);
+    padding: 4px;
+    margin: 20px;
 }
 
 #footer {
     min-height: 46px; width: 100%;
     background-color: var(--gold-color);
-    /* Sticky footer */
-    bottom: 0; left: 0; position: fixed;
+    position: fixed; bottom: 0; left: 0;
+    margin-bottom: auto;
     text-align: center;
 }
