--- a/index/index.css
+++ b/index/index.css
@@ -4,25 +4,28 @@
     --text-color: white;
 }
 
+html {
+    min-height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
     background-color: var(--main-color);
     color: var(--text-color);
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #header {
     font-size: 20px;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    align-items: center; justify-content: flex-end;
 }
 
 #header > .logo {
     display: flex;
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 100px; max-height: 100px;
     margin: 0 auto 0 0;
 }
 
@@ -30,7 +33,7 @@ body {
     margin-right: 18px;
 }
 
- .header-buttons > button {
+.header-buttons > button {
     background-color: transparent;
     color: var(--text-color);
     font-size: 18px;
@@ -64,11 +67,9 @@ button#order-btn {
 }
 
 #hero-content {
-    display: flex;
-    flex-direction: column;
+    display: flex; flex-direction: column;
     position: relative;
-    justify-content: center;
-    align-items: center;
+    justify-content: center; align-items: center;
     color: var(--gold-color);
 
 }
@@ -77,27 +78,39 @@ button#order-btn {
     width: 100%; height: auto; max-width: 100px;
 }
 
+#collections {
+    display: flex; flex-direction: column;
+}
+
+h1#col-text {
+    color: var(--gold-color);
+    background-color: white;
+    margin: -10px;
+    margin-top: 10px;
+    padding: 18px;
+    text-align: center;
+}
+
 #grid {
     background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 20px;
+    padding: 16px;
 }
 
 .col-btn {
-    width: 100%; max-width: 400px; height: auto;
+    width: 100%; max-width: 220px; max-height: auto;
     padding: 1rem;
     position: relative;
     background: linear-gradient(to right, var(--gold-color), gold);
     padding: 4px;
-    margin: 20px;
+    margin: 16px;
 }
 
 #footer {
     min-height: 46px; width: 100%;
     background-color: var(--gold-color);
-    position: fixed; bottom: 0; left: 0;
-    margin-bottom: auto;
+    position: relative; bottom: 0; left: 0;
     text-align: center;
 }
