--- a/index/index.css
+++ b/index/index.css
@@ -1,7 +1,6 @@
 :root {
     --main-color: #2a2525;
-    --gold-color: #d6963d;
-    --text-color: white;
+    --gold-color: #dd8133;
 }
 
 html {
@@ -12,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: var(--main-color);
-    color: var(--text-color);
+    color: white;
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -25,8 +24,9 @@ body {
 
 #header > .logo {
     display: flex;
-    max-width: 100px; max-height: 100px;
+    max-width: 140px; max-height: 100px;
     margin: 0 auto 0 0;
+    padding: 20px;
 }
 
 .header-buttons {
@@ -35,7 +35,7 @@ body {
 
 .header-buttons > button {
     background-color: transparent;
-    color: var(--text-color);
+    color: white;
     font-size: 18px;
     border: none;
     padding: 10px;
@@ -71,11 +71,13 @@ button#order-btn {
     position: relative;
     justify-content: center; align-items: center;
     color: var(--gold-color);
-
+    padding: 20px;
+    margin-bottom: 40px;
 }
 
 #hero-content > .logo {
-    width: 100%; height: auto; max-width: 100px;
+    width: 100%; height: auto; max-width: 340px;
+    margin-bottom: 40px; margin-top: 120px;
 }
 
 #collections {
