--- a/index/index.css
+++ b/index/index.css
@@ -1,6 +1,7 @@
 :root {
     --main-color: #2a2525;
-    --gold-color: #dd8133;
+    --volcano-gold: #dd8133;
+    --hover-gold: #ac6323;
 }
 
 html {
@@ -16,12 +17,17 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+button {
+    cursor: pointer;
+}
+
 #header {
     display: flex;
     align-items: center; justify-content: flex-end;
     font-size: 20px;
     width: 100%;
     z-index: 1;
+    transition-duration: 0.4s;
 }
 
 #header > .logo {
@@ -32,7 +38,7 @@ body {
 }
 
 .header-buttons {
-    margin-right: 18px;
+    margin-right: 20px;
 }
 
 .header-buttons > button {
@@ -56,14 +62,21 @@ body {
     padding-top: 62.44px;
 }
 
-button#order-btn {
-    background-color: var(--gold-color);
+#order-btn {
+    background-color: var(--volcano-gold);
     border-radius: 30px;
     padding: 5px 15px;
     border: none;
     color: white;
     min-height: 40px; min-width: 110px;
+    transition-duration: 0.3s;
 }
+
+#order-btn:hover {
+    background-color: var(--hover-gold);
+    border-radius: 8px;
+}
+
 
 #hero {
     z-index: -1;
@@ -74,16 +87,17 @@ button#order-btn {
 #hero-video {
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 0; opacity: 0.4;
-    width: 100%; height: auto;
+    min-height: 535px; min-width: 1100px; width: 100%;
     margin-top: -30px;
     filter: blur(3px);
+    z-index: -1;
 }
 
 #hero-content {
     display: flex; flex-direction: column;
     position: relative;
     justify-content: center; align-items: center;
-    color: var(--gold-color);
+    color: var(--volcano-gold);
     padding: 20px;
     margin-bottom: 40px;
 }
@@ -98,7 +112,7 @@ button#order-btn {
 }
 
 h1#col-text {
-    color: var(--gold-color);
+    color: var(--volcano-gold);
     background-color: white;
     margin: -10px;
     margin-top: 10px;
@@ -115,10 +129,10 @@ h1#col-text {
 }
 
 .col-btn {
-    width: 100%; max-width: 220px; max-height: auto;
+    width: 100%; max-width: 300px; max-height: auto;
     padding: 1rem;
     position: relative;
-    background: linear-gradient(to right, var(--gold-color), gold);
+    background: linear-gradient(to right, var(--volcano-gold), gold);
     padding: 4px;
 }
 
@@ -128,7 +142,8 @@ h1#col-text {
 
 #footer {
     min-height: 46px; width: 100%;
-    background-color: var(--gold-color);
+    background-color: var(--volcano-gold);
     position: relative; bottom: 0; left: 0;
+    padding: 6px;
     text-align: center;
 }
