--- a/index/index.css
+++ b/index/index.css
@@ -33,7 +33,7 @@ button {
 
 #header > .logo {
     display: flex;
-    max-width: 140px; max-height: 100px;
+    max-width: 160px; height: auto;
     margin: 0 auto 0 0;
     padding: 20px;
 }
@@ -65,7 +65,7 @@ button {
 
 #order-btn {
     background-color: var(--volcano-gold);
-    border-radius: 30px;
+    border-radius: 15px;
     padding: 5px 15px;
     border: none;
     color: white;
@@ -80,7 +80,8 @@ button {
 
 
 #hero {
-    
+    display: flex; flex-direction: column;
+    justify-content: center;
     z-index: -1;
     /* min-height: 100%; */
     height: 100vh;
@@ -96,14 +97,14 @@ button {
 
 #hero-content {
     display: flex; flex-direction: column;
-    height: 100vh;
     position: relative;
+    margin-bottom: 150px;
     justify-content: center; align-items: center;
     color: var(--volcano-gold);
 }
 
 #hero-content > .logo {
-    width: 100%; height: auto; max-width: 340px;
+    width: 100%; height: auto; max-width: 600px;
     margin-bottom: 40px; margin-top: 120px;
     filter: drop-shadow(5px 5px 0.75rem black);
 }
