--- a/index/index.css
+++ b/index/index.css
@@ -102,7 +102,7 @@ body {
 
 .order-btn {
     background-color: var(--volcano-gold);
-    border-radius: 15px;
+    border-radius: 12px;
     padding: 12px 20px;
     font-size: calc(8px + 1vh);
     border: none;
@@ -137,6 +137,7 @@ body {
 .hero-content {
     display: flex; flex-direction: column;
     position: relative;
+    font-size: 20px;
     margin-bottom: 160px; margin-left: 30px; margin-right: 30px;
     justify-content: center; align-items: center;
     color: var(--volcano-gold);
@@ -148,24 +149,27 @@ body {
     filter: drop-shadow(5px 5px 0.75rem black);
 }
 
+.hero-content .order-btn {margin-top: 12px;}
+
 #about {
-    display: flex;
-    align-items: center; justify-content: center;
+    display: flex; justify-content: center;
+    align-items: center;
     width: 100%; min-height: 100vh;
     background-color: var(--alt-color);
 }
 
 .about-content {
-    display: flex; flex-direction: column; flex-wrap: wrap;
+    display: flex; flex-direction: column;
     align-items: center; justify-content: center;
-    max-width: 540px;
-    font-size: 18px;
-    margin: 80px;
+    max-width: 600px; min-height: 100vh;
+    font-size: calc(10px + 1vw);
+    margin-top: 50px; margin-bottom: 50px;
 }
 
-.about-content h1 {font-size: calc(20px + 1vw); color: var(--volcano-gold);}
+.about-content h1 {font-size: calc(14px + 1vw); color: var(--volcano-gold);}
 
 .about-content img {
+    flex-shrink: 1;
     width: 100%;
     margin-top: 20px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
