--- a/index/index.css
+++ b/index/index.css
@@ -23,13 +23,15 @@ body {
 
 #header {
     display: flex;
-    align-items: center; justify-content: flex-end;
+    align-items: center;
     font-size: 20px;
     width: 100%;
     z-index: 1;
     transition-duration: 0.4s;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.);
 }
+
+.scrolltotop {position: absolute; width: 160px; height: 25.641px; margin-left: 20px;}
 
 #header > .logo {
     display: flex;
